@@ -887,9 +887,9 @@ data:extend({
     ingredients =
     {
       PM.ingredient("pm-evaporator", 1),
-      PM.ingredient("pm-corrosion-resistant-tubing", 12),
-      PM.ingredient("pm-thallium-plate", 3),
-      PM.ingredient("pm-heating-plating", 10)
+      PM.ingredient("pm-corrosion-resistant-tubing", 8),
+      PM.ingredient("pm-fluid-circuit", 2),
+      PM.ingredient("pm-heating-plating", 6)
     },
     results =
     {
